contra voucher, purchase order 06-09-2023

--- a/app1/templates/credit_note.html
+++ b/app1/templates/credit_note.html
@@ -812,7 +812,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit1').value = amount;
+                    // document.getElementById('unit1').value = amount;
                    
 
             }});
@@ -829,7 +829,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit11').value = amount;
+                    // document.getElementById('unit11').value = amount;
                    
 
             }});
@@ -847,7 +847,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit12').value = amount;
+                    // document.getElementById('unit12').value = amount;
                    
 
             }});  
@@ -865,8 +865,8 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit13').value = amount;
-                   
+                    // document.getElementById('unit13').value = amount;
+                //    
 
             }});  
         }
@@ -883,7 +883,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit14').value = amount;
+                    // document.getElementById('unit14').value = amount;
                    
 
             }});  
@@ -901,7 +901,7 @@
                     amount = response.amount
                     document.getElementById('rates').value = amount;
                     
-                    document.getElementById('unit15').value = amount;
+                    // document.getElementById('unit15').value = amount;
 
             }});  
         }
@@ -918,7 +918,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit16').value = amount;
+                    // document.getElementById('unit16').value = amount;
                    
 
             }});  
@@ -936,7 +936,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit17').value = amount;
+                    // document.getElementById('unit17').value = amount;
                    
 
             }});  
@@ -954,7 +954,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit18').value = amount;
+                    // document.getElementById('unit18').value = amount;
                    
 
             }});  
@@ -972,7 +972,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit19').value = amount;
+                    // document.getElementById('unit19').value = amount;
                    
 
             }});  
@@ -990,7 +990,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit110').value = amount;
+                    // document.getElementById('unit110').value = amount;
                    
 
             }});  
@@ -1008,7 +1008,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit111').value = amount;
+                    // document.getElementById('unit111').value = amount;
                    
 
             }});  
@@ -1026,7 +1026,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit112').value = amount;
+                    // document.getElementById('unit112').value = amount;
                    
 
             }});  
@@ -1044,7 +1044,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit113').value = amount;
+                    // document.getElementById('unit113').value = amount;
                    
 
             }});  
@@ -1062,7 +1062,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit114').value = amount;
+                    // document.getElementById('unit114').value = amount;
                    
 
             }});  
@@ -1080,7 +1080,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit115').value = amount;
+                    // document.getElementById('unit115').value = amount;
                    
                    
 
@@ -1099,7 +1099,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit116').value = amount;
+                    // document.getElementById('unit116').value = amount;
                    
                    
 
@@ -1118,7 +1118,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit117').value = amount;
+                    // document.getElementById('unit117').value = amount;
                    
                    
 
@@ -1137,7 +1137,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit118').value = amount;
+                    // document.getElementById('unit118').value = amount;
                    
                    
 
@@ -1156,7 +1156,7 @@
                     console.log(response)
                     amount = response.amount
                     document.getElementById('rates').value = amount;
-                    document.getElementById('unit119').value = amount;
+                    // document.getElementById('unit119').value = amount;
                    
                    
 
@@ -1176,7 +1176,7 @@
                     amount = response.amount
                     document.getElementById('rates').value = amount;
                     
-                    document.getElementById('unit120').value = amount;
+                    // document.getElementById('unit120').value = amount;
                    
 
             }});  
