--- a/app1/templates/contra_voucher.html
+++ b/app1/templates/contra_voucher.html
@@ -1055,7 +1055,7 @@ function showTransaction(){
 
         $.ajax({
                     type : 'POST',
-                    url:"{% url 'bank_transcation' %}",
+                    url:"{% url 'bank_transaction' %}",
                 
                     data:{
                         bacc : $("#chacc").text(),
@@ -1086,7 +1086,7 @@ function showTransaction(){
 
         $.ajax({
                     type : 'POST',
-                    url:"{% url 'bank_transcation' %}",
+                    url:"{% url 'bank_transaction' %}",
                 
                     data:{
                         bacc : $("#efacc").text(),
@@ -1116,7 +1116,7 @@ function showTransaction(){
 
         $.ajax({
                     type : 'POST',
-                    url:"{% url 'bank_transcation' %}",
+                    url:"{% url 'bank_transaction' %}",
                 
                     data:{
                         bacc : $("#csacc").text(),
@@ -1145,7 +1145,7 @@ function showTransaction(){
 
         $.ajax({
                     type : 'POST',
-                    url:"{% url 'bank_transcation' %}",
+                    url:"{% url 'bank_transaction' %}",
                 
                     data:{
                         bacc : $("#othacc").text(),
