--- a/app1/templates/list_purchase_type.html
+++ b/app1/templates/list_purchase_type.html
@@ -100,7 +100,7 @@
         </div>
       
             
-            <form action="{% url 'purchase_vouch' %}" id="frmvouch" method="POST"  style="background-color:rgba(0,0,0,.4);">
+            <form action="{% url 'purchase_vouchers' %}" id="frmvouch" method="POST"  style="background-color:rgba(0,0,0,.4);">
                 {% csrf_token %}
                 <div class="row container-fluid center  p-2 m-0">
                     <a href="vouchers" style="cursor:pointer" class="btn bt btns_prnt" role="button">Create</a>  
