credit note corrections 08-09-2023

--- a/app1/templates/credit_note.html
+++ b/app1/templates/credit_note.html
@@ -228,10 +228,11 @@
     <div class="modal-dialog modal-lg modal-dialog-scrollable">
         <div class="modal-content" style="background-color: #1c3143; color: white">
             <div class="modal-header">
-                <h5 class="m-3">List Of Ledger Account</h5>
+                <h5 class="m-3">List Of Ledger Account</h5> 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    &times;
                 </button>
+                
             </div>
             <div class="modal-body">
                 <div class="card p-3 m-3">
@@ -369,7 +370,11 @@
                         </div>
                     </div>    
                         
-                    
+                    <div class="row mt-4">
+                        <div class="col-sm-12 ">
+                            <a href="" data-dismiss="modal"><input type="submit" value="Save" style="margin-left: 45%;"></a>
+                        </div>
+                    </div>
 
                 </div>
             </div>
