journal voucher coeertions 13-09-2023

--- a/app1/templates/salesvoucher.html
+++ b/app1/templates/salesvoucher.html
@@ -242,5 +242,5 @@ function clickDispButton() {
   document.getElementById("dis_link").click();
 }
 </script>
-{% include "sales_vou_ajax.html"%}
+<!-- {% include "sales_vou_ajax.html"%} -->
 {% endblock body %}
