--- a/app1/templates/journal_voucher.html
+++ b/app1/templates/journal_voucher.html
@@ -1,3 +1,4 @@
+<!-- updated by Nithya -->
 {% extends 'base.html' %}
 {% block body %}
 {% load static %}
@@ -359,13 +360,13 @@
 
                 if (data[0].current_blnc_type == 'Dr') {
 
-                    curData1 = '<input id ="pled'+ids +'" +  class= "txt" readonly value = ' + data[0].current_blnc + '> <input id ="pledt'+ids +'" class= "txt" readonly value = ' + data[0].current_blnc_type + '>';
+                    curData1 = '<input id ="pled'+ids +'" +  class= "txt" readonly value = ' + data[0].current_blnc + ' name = pled[]> <input id ="pledt'+ids +'" name = pledt[] class= "txt" readonly value = ' + data[0].current_blnc_type + '> <input id ="fixed_pled'+ids +'" +  class= "txt" readonly value = ' + data[0].current_blnc + '> <input id ="fixed_pledt'+ids +'" class= "txt" readonly value = ' + data[0].current_blnc_type + '>';
                 }
                 else {
-                    curData1 = '<input id ="pled'+ids +'" class= "txt" readonly value = ' + data[0].current_blnc + ' style="color: red;"> <input id ="pledt'+ids +'" style="color: red;"  class= "txt" readonly value = ' + data[0].current_blnc_type + '>';
+                    curData1 = '<input id ="pled'+ids +'" class= "txt" readonly value = ' + data[0].current_blnc + ' name = pled[] style="color: red;"> <input id ="pledt'+ids +'" name = pledt[] style="color: red;"  class= "txt" readonly value = ' + data[0].current_blnc_type + '> <input id ="fixed_pled'+ids +'" class= "txt" readonly value = ' + data[0].current_blnc + ' style="color: red;"> <input id ="fixed_pledt'+ids +'" style="color: red;"  class= "txt" readonly value = ' + data[0].current_blnc_type + '>';
                 }
                 $("#blnc" + ids).html(curData1);
-
+                calculateTotalCredit();
             }
 
         });
@@ -377,8 +378,8 @@
 
         const id = $(this).attr('id');
         const pac = $('#debit' + id).val();
-        const curblnc1 = $('#pled' +id).val();
-        const curblnct1 = $('#pledt' +id).val();
+        const curblnc1 = $('#fixed_pled' +id).val();
+        const curblnct1 = $('#fixed_pledt' +id).val();
 
         if (curblnct1 == 'Dr') {
 
@@ -412,7 +413,7 @@
                 },
 
                 success: function (data) {
-
+                    console.log(data)
                     $("#blnc" + (id)).html(data);
                  }
 
@@ -454,11 +455,11 @@
 
                 amount2 =$('#debit_total').val()- $('#credit_total').val();
 
-                $(".part").append('<tr id="row' + crid + '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + crid + '" name="dr_cr_opt" onChange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Cr">Cr</option><option value="Dr" >Dr</option></select> <select id="debit' + crid + '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + crid + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + crid + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3"><input type="hidden" name= "debit_amnt[]" value=0></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt credit_amnt" id= "credit_amnt' + cid + '" name = "credit_amnt[]" value ="' + amount2 + '" onclick="calculateTotalCredit();"><button type="button" class="butn" id = "butn' + crid + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> </tr>');
+                $(".part").append('<tr id="row' + crid + '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + crid + '" name="dr_cr_opt" onChange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Cr">Cr</option><option value="Dr" >Dr</option></select> <select id="debit' + crid + '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + crid + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + crid + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3"><input type="hidden" name= "debit_amnt[]" value=0></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt credit_amnt" id= "credit_amnt' + cid + '" name = "credit_amnt[]" value ="' + amount2 + '" onchange="calculateTotalCredit();"><button type="button" class="butn" id = "butn' + crid + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> </tr>');
 
             }
             else {
-                $(".part").append('<tr id="row' + crid + '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + crid + '" name="dr_cr_opt" onChange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Dr">Dr</option><option value="Cr" >Cr</option></select> <select id="debit' + crid + '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + crid + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + crid + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt debit_amnt" id= "debit_amnt' + did + '" name = "debit_amnt[]"  onchange="calculateTotalDebit();"> <button type="button" class="butn" id = "butn' + crid + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> <td><input type="hidden" name= "credit_amnt[]" value=0></td></tr>');
+                $(".part").append('<tr id="row' + crid + '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + crid + '" name="dr_cr_opt" onChange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Dr">Dr</option><option value="Cr" >Cr</option></select> <select id="debit' + crid + '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + crid + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + crid + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt debit_amnt" id= "debit_amnt' + did + '" name = "debit_amnt[]"  onchange="calculateTotalDebit();"> <button type="button" class="butn" id = "butn' + crid + '"  onchange="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> <td><input type="hidden" name= "credit_amnt[]" value=0></td></tr>');
 
             }
 
@@ -472,7 +473,7 @@
                 document.getElementById('onacc' + (cid)).innerHTML = "On Account :   " + amount1;
 
 
-                $(".part").append('<tr id="row' + crid+ '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + crid + '" name="dr_cr_opt" onChange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Cr">Cr</option><option value="Dr" >Dr</option></select> <select id="debit' + crid+ '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + crid + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + crid + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3"><input type="hidden" name= "debit_amnt[]" value=0></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt credit_amnt" id= "credit_amnt' + cid + '" name = "credit_amnt[]" value ="' + amount2 + '" onclick="calculateTotalCredit();" > <button type="button" class="butn" id = "butn' + crid + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> </tr>');
+                $(".part").append('<tr id="row' + crid+ '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + crid + '" name="dr_cr_opt" onChange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Cr">Cr</option><option value="Dr" >Dr</option></select> <select id="debit' + crid+ '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + crid + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + crid + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3"><input type="hidden" name= "debit_amnt[]" value=0></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt credit_amnt" id= "credit_amnt' + cid + '" name = "credit_amnt[]" value ="' + amount2 + '" onchange="calculateTotalCredit();" > <button type="button" class="butn" id = "butn' + crid + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> </tr>');
 
 
             }
@@ -514,12 +515,12 @@
                 amount2 = $('#debit_total').val() - $('#credit_total').val();
                 // console.log(amount2);
 
-                document.getElementById('row' + id).outerHTML = '<tr id="row' + id + '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + id + '" name="dr_cr_opt" onchange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Cr">Cr</option><option value="Dr" >Dr</option></select> <select id="debit' + id + '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + id + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + id + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3"><input type="hidden" name= "debit_amnt[]" value=0></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt credit_amnt" id= "credit_amnt' + cid + '" name = "credit_amnt[]" value ="' + amount2 + '" onclick="calculateTotalCredit();"> <button type="button" class="butn" id = "butn' + id + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> </tr>';
+                document.getElementById('row' + id).outerHTML = '<tr id="row' + id + '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + id + '" name="dr_cr_opt" onchange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Cr">Cr</option><option value="Dr" >Dr</option></select> <select id="debit' + id + '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + id + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + id + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3"><input type="hidden" name= "debit_amnt[]" value=0></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt credit_amnt" id= "credit_amnt' + cid + '" name = "credit_amnt[]" value ="' + amount2 + '" onchange="calculateTotalCredit(); "> <button type="button" class="butn" id = "butn' + id + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> </tr>';
             }
             else {
 
              
-                document.getElementById('row' + id).outerHTML = '<tr id="row' + id + '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + id + '" name="dr_cr_opt" onchange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Cr">Cr</option><option value="Dr" >Dr</option></select> <select id="debit' + id + '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + id + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + id + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3"><input type="hidden" name= "debit_amnt[]" value=0></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt credit_amnt" id= "credit_amnt' + cid + '" name = "credit_amnt[]" onclick="calculateTotalCredit();"> <button type="button" class="butn" id = "butn' + id + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> </tr>';
+                document.getElementById('row' + id).outerHTML = '<tr id="row' + id + '" style="border: none;"><td colspan="16" style="border: none;" class="mt-4"> <select id="dr_cr_opt' + id + '" name="dr_cr_opt" onchange="changeOption()" style="background-color: rgb(17, 54, 86);"><option value="Cr">Cr</option><option value="Dr" >Dr</option></select> <select id="debit' + id + '"  name="opt[]" class=" rows acc payacc mb-2 p-0" style="width: 150px; border-radius: 5px;" onchange="changeCurbalance(this);" ><option class="opt" id = "opt" >&nbsp;&nbsp;Select Particular </option>{% for i in ledg_all %}<option class="opt" id = "opt" value="{{i.id}}" >&nbsp;&nbsp;{{i.name}}</option> {% endfor %}</select> <br><label class = "blnc1" style="color: #000; margin-left: 40px;" >&nbsp;&nbsp;Cur Bal:&nbsp;&nbsp;</label> <label class = "blnc1" id="blnc' + id + '" class="p-0 mt-0" style="color: #000;"></label><label id ="onacc' + id + '" class="onacc" name = "onacc" style="color: #000; margin-left: 25px;"></label></td><td colspan="3"><input type="hidden" name= "debit_amnt[]" value=0></td><td colspan="3" class="text-right mt-0" style="border: none; "><input type="number" class = "txt credit_amnt" id= "credit_amnt' + cid + '" name = "credit_amnt[]" onchange="calculateTotalCredit();"> <button type="button" class="butn" id = "butn' + id + '"  onclick="createRow()"><i class="bi bi-plus-square-fill" style="font-size: 20px;"></i></button></td> </tr>';
 
             }
          
@@ -554,8 +555,8 @@
         console.log(did);
         console.log(cid);
         const pac = $('#debit' + id).val();
-        const curblnc1 = $('#pled' +id).val();
-        const curblnct1 = $('#pledt' +id).val();
+        const curblnc1 = $('#fixed_pled' +id).val();
+        const curblnct1 = $('#fixed_pledt' +id).val();
         var amount1 = $('#debit_amnt' + did).val();
           
 
@@ -605,9 +606,10 @@
         var cid = $(".credit_amnt").length;
         
         const pac = $('#debit' + id).val();
-        const curblnc1 = $('#pled' +id).val();
-        const curblnct1 = $('#pledt' +id).val();
-       
+        const curblnc1 = $('#fixed_pled' +id).val();
+        const curblnct1 = $('#fixed_pledt' +id).val();
+       console.log(curblnc1)
+       console.log(curblnct1)
 
         var amount1 = $('#credit_amnt' + cid).val();
              $.ajax({
@@ -620,6 +622,7 @@
                 },
 
                 success: function (data) {
+                    console.log(data);
 
                     $("#blnc" + (id )).html(data);
                     console.log(data);
