--- a/app1/templates/base.html
+++ b/app1/templates/base.html
@@ -756,6 +756,51 @@
 
                     <li>
                         <a href="javascript:;" class="has-arrow">
+                            <div class="parent-icon"><i class='bx bx-clipboard'></i></div>
+                            <div class="menu-title">Transactions</div>
+                        </a>
+                        <ul>
+                            <li><a href="{% url 'Daybook_page' %}"><i class="bx bx-right-arrow-alt"></i>Daybook</a></li>
+                            <li>
+                                <a href="javascript:;" class="has-arrow"><i class='bx bx-right-arrow-alt'></i>Vouchers</a>
+                                <ul>
+                                    <li><a href="list_payment_voucher"><i class="bx bx-right-arrow-alt"></i>Payment</a>
+                             
+                                    </li>
+                                    
+                                
+                                    <li><a href="list_receipt_voucher"><i class="bx bx-right-arrow-alt"></i>Receipt</a>
+        
+                                        
+                                    </li>
+                                    
+                                    <li><a href="{% url 'list_crd_voucher'%}"><i class="bx bx-right-arrow-alt"></i>Credit Note</a>
+                                        
+                                    </li>
+                                    <li><a href="{% url 'list_deb_voucher'%}"><i class="bx bx-right-arrow-alt"></i>Debit Note</a>
+                                        
+                                    </li>
+                                    <li><a href="{% url 'list_contra_voucher' %}"><i class="bx bx-right-arrow-alt"></i>Contra</a>
+                                        
+                                    </li>
+                                    
+                                    <li><a href="list_journal_voucher"><i class="bx bx-right-arrow-alt"></i>Journal</a>
+        
+                                    </li>
+                                    <li><a href="{% url 'salesvoucher' %}"><i class="bx bx-right-arrow-alt"></i>Sales Voucher</a>
+        
+                                    </li>
+                                    <li><a href="{% url 'list_purchase_voucher' %}"><i class="bx bx-right-arrow-alt"></i>Purchase</a>
+        
+                                    </li>
+
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+
+                    <!-- <li>
+                        <a href="javascript:;" class="has-arrow">
 
                             <div class="parent-icon"><i class='bx bx-clipboard'></i>
                             </div>
@@ -794,7 +839,7 @@
 
                         </ul>
 
-                    </li>
+                    </li> -->
                     <li>
                         <a href="javascript:;" class="has-arrow">
 
